@@ -2,7 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.36 2004/12/25 23:51:02 port001 Exp $
+# $Id: ChangeLog,v 1.37 2004/12/28 19:28:24 port001 Exp $
+
+28 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * Replace the 'values' method with a class with methods like the 
+   old cgi.FieldStorage
 
 24 Dec 2004; Ian Leitch <port001@gentoo.org>:
  * Improved the 'Who Is Online' slightly 
